--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   awesome_dialog: ^1.2.0
   font_awesome_flutter: ^8.8.1
   fluttertoast: ^7.1.1
+  url_launcher: ^5.5.0
 
 
 dev_dependencies:
